<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/bottomChooseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bottomCameraImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/baseline_camera_alt_30"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomChooseTextView" />

    <TextView
        android:id="@+id/bottomClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_a_photo"
        app:layout_constraintCircle="@id/bottomCameraImage"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintLeft_toRightOf="@id/bottomCameraImage"
        app:layout_constraintTop_toBottomOf="@id/bottomChooseTextView" />

    <ImageView
        android:id="@+id/bottomGalleryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/baseline_add_photo_alternate_30"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomCameraImage"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/bottomPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_photo"
        app:layout_constraintCircle="@id/bottomGalleryImage"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintLeft_toRightOf="@id/bottomGalleryImage"
        app:layout_constraintTop_toBottomOf="@id/bottomClick"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>